# machine

./: .envrc  .flake8  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.claude/projects/-home-david-projects-stirlingbridge-machine/memory/: MEMORY.md  project_e2e_tests.md
.github/workflows/: build-release.yml  e2e-test.yml  lint.yml  test.yml
machine/: cloud_config.py  config.py  constants.py  defaults.py  di.py  factory.py  log.py  main.py  provider.py  types.py  util.py
machine/providers/: __init__.py  digitalocean.py  vultr.py
machine/subcommands/: check.py  create.py  destroy.py  domains.py  info.py  list.py  list_domain.py  projects.py  ssh_keys.py  status.py  types.py
sh/: build-package.sh  dev-setup.sh  lint.sh  make-release-tag.sh
tests/: E2E.md  test_cli_integration.py  test_config.py  test_e2e.py  test_input_validation.py
